--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,7 +7,7 @@
     <ul>
     {{#each users}}
       <li>
-        <a href='/details'> {{name}} ({{email}}) </a></li>
+        <a href='/profiles/{{id}}'> {{name}} ({{email}}) </a></li>
     {{/each}}
     </ul>
   </body>
