added a post route that adds a new user and fear, updates table

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,5 +10,7 @@
         <a href='/profiles/{{id}}'> {{name}} ({{email}}) </a></li>
     {{/each}}
     </ul>
+
+    <a href="/addNew">add new animal </a>
   </body>
 </html>
